Changed sync policy from hello-k8s app

--- a/control-app/applications/application-hello-k8s.yaml
+++ b/control-app/applications/application-hello-k8s.yaml
@@ -14,3 +14,7 @@ spec:
     directory:
       recurse: true
   project: hello-k8s
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
