--- a/control-app/applications/application-helm-dependeny.yaml
+++ b/control-app/applications/application-helm-dependeny.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: helm-dependency
+  name: deploy-helm-dependency
 spec:
   destination:
     name: ''
