--- a/control-app/applications/application-helm-dependeny.yaml
+++ b/control-app/applications/application-helm-dependeny.yaml
@@ -13,6 +13,8 @@ spec:
     targetRevision: HEAD
     directory:
       recurse: true
+    helm:
+      version: v3
   project: helm-dependency
   syncPolicy:
     automated:
