--- a/control-app/applications/application-helm-dependency-archive.yaml
+++ b/control-app/applications/application-helm-dependency-archive.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: deploy-helm-dependency
+  name: deploy-helm-dependency-archive
 spec:
   destination:
     name: ''
     namespace: argocd-apps
     server: 'https://kubernetes.default.svc'
   source:
-    path: gitops/helm-dependency/
+    path: gitops/helm-archive/
     repoURL: 'https://github.com/paule1953/play-argocd.git'
     targetRevision: HEAD
     directory:
