--- a/control-app/applications/application-helm-dependency-archive.yaml
+++ b/control-app/applications/application-helm-dependency-archive.yaml
@@ -8,7 +8,7 @@ spec:
     namespace: argocd-apps
     server: 'https://kubernetes.default.svc'
   source:
-    path: gitops/helm-archive/
+    path: gitops/helm-archive/oauth2-proxy-4.2.2.tgz
     repoURL: 'https://github.com/paule1953/play-argocd.git'
     targetRevision: HEAD
     directory:
