--- a/control-app/applications/application-helm-dependency.yaml
+++ b/control-app/applications/application-helm-dependency.yaml
@@ -12,3 +12,7 @@ spec:
     repoURL: 'https://github.com/argoproj/argocd-example-apps.git'
     targetRevision: HEAD
   project: helm-dependency
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
