--- a/control-app/applications/application-helm-dependency.yaml
+++ b/control-app/applications/application-helm-dependency.yaml
@@ -11,6 +11,8 @@ spec:
     path: helm-dependency
     repoURL: 'https://github.com/argoproj/argocd-example-apps.git'
     targetRevision: HEAD
+    helm:
+      version: v3
   project: helm-dependency
   syncPolicy:
     automated:
